--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -261,16 +261,21 @@ a {
 
 // ─── Scrollbar ────────────────────────────────────────────────────────────────
 ::-webkit-scrollbar {
-  width: 6px;
+  width: 1px !important;
+  height: 1px !important;
 }
 
 ::-webkit-scrollbar-track {
-  background: var(--bg-primary);
+  background: transparent;
 }
 
 ::-webkit-scrollbar-thumb {
-  background: #333;
+  background: var(--text-muted);
   border-radius: 10px;
+
+  &:hover {
+    background: var(--text-secondary);
+  }
 }
 
 // ─── Selection ────────────────────────────────────────────────────────────────
